Bump up wicket version to 10.0.0